# extended-thinking

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.web  LICENSE.md  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  project-invariants.md
api/: pyproject.toml
api/src/extended_thinking/: __init__.py  __main__.py  cli.py  cli_doctor.py  cli_style.py  cli_wizard.py  mcp_server.py
api/src/extended_thinking/_schema/: __init__.py  kuzu_types.py
api/src/extended_thinking/ai/: anthropic.py  base.py  openai.py  registry.py
api/src/extended_thinking/algorithms/: __init__.py  protocol.py  registry.py
api/src/extended_thinking/api/: main.py
api/src/extended_thinking/config/: __init__.py  commands.py  loader.py  migrate.py  paths.py  schema.py
api/src/extended_thinking/hooks/: et_precompact_hook.sh  et_save_hook.sh
api/tests/: conftest.py  test_activation.py  test_algorithm_writeback.py  test_algorithms.py  test_algorithms_config_bridge.py  test_bitemporal.py  test_bridges.py  test_concept_store.py  test_concept_store_graph.py  test_config_cli.py  test_config_get_set.py  test_config_loader.py  test_config_migrate.py  test_config_secrets_guard.py  test_enrichment_mcp.py  test_enrichment_ontology.py  test_enrichment_plugins.py  test_enrichment_scaffold.py  test_enrichment_sync_hook.py  test_entity_resolution.py  test_extract_concepts_flag.py  test_extractor_provider.py  test_filtered_diff.py  test_find_similar_typed.py  test_graph_store.py  test_graph_store_ontology.py  test_invariants.py  test_kg_evolution.py  test_kuzu_ddl_codegen.py  test_kuzu_types_codegen.py  test_link_prediction.py  test_living_graph.py  test_mcp_write_tools.py  test_namespace.py  test_pipeline_provider.py  test_provider_auto.py  test_provider_chatgpt_export.py  test_provider_claude_code.py  test_provider_copilot_chat.py  test_provider_folder.py  (+12 more)
api/tests/acceptance/: test_activation_properties.py  test_algorithm_outputs.py  test_cassette_real_model.py  test_cli_errors.py  test_cli_help.py  test_cli_smoke.py  test_decay_properties.py  test_end_to_end_pipeline.py  test_enrichment_at.py  test_folder_namespace.py  test_graph_store_lifetime.py  test_invariants_at_scale.py  test_link_prediction_properties.py  test_mascot_alignment.py  test_projects_provider.py  test_provenance_chain.py  test_provider_fusion.py  test_reinforcement_properties.py  test_research_loop.py  test_schema_drift.py  test_typed_write_surface.py
api/tests/helpers/: __init__.py  assertions.py  dummy_embed.py  fake_llm.py  fixture_loader.py  snapshot_matchers.py
(+93 files in other folders)
